--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4",
-    "@react-three/drei": "^9.103.0",
-    "@react-three/fiber": "^9.0.0",
-    "three": "^0.170.0"
+    "next": "15.5.4"
   },
   "devDependencies": {
     "typescript": "^5",
